--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Contact</h1>
     <ul>
-      <li>Phone: 0734 nosh my bollocks ave</li>
+      <li>Phone: 0734* ******</li>
       <li>Email: thisoneisntasrude@gmail.com</li>
     </ul>
     <hr>
